--- a/meditacao.html
+++ b/meditacao.html
@@ -29,7 +29,7 @@
                     <li>Quais as regras que devo seguir?</li>
                     <li>Como posso proteger e prover a mim e aos que me importam?</li>
                     <li>O que é poder pra mim?</li>
-                    <li>O que é ser um líder, e o que é ser autoritário?</li>
+                    <li class="textofinalpag">O que é ser um líder, e o que é ser autoritário?</li>
                 </ol>
             </div>
         </section>
